# ITV

./: LICENSE  Makefile  README.md  environment.yml  generate_env_yml.py  pyproject.toml  requirements.txt
docs/: Makefile  advanced_usage.rst  annotation_matching.rst  axis.rst  bams.rst  cell_barcode.rst  classification.rst  conf.py  convenience.rst  convenience_configuration.rst  details.rst  graphs.rst  index.rst  make.bat  rendering.rst  requirements.txt  usage.rst
docs/annotation_matching/: annotation_matching.rst  isoquant_substring_annotation_matching.rst  tagged_bam_annotation_matching.rst
docs/cell_barcode/: cellbarcode.rst  haas_style_cell_barcode.rst  ont_cell_barcode.rst  standard_cell_barcode.rst
docs/classification/: bamtag_classification.rst  classification.rst  isoquant_classification.rst
docs/convenience_configuration/: build_view_row.rst  configuration.rst  plot_by_classification_as_tabs.rst  plot_by_classification_over_features.rst  plot_by_features_as_tab.rst  plot_exons.rst  plot_exons_slices.rst.ignore  plot_feature.rst  plot_features.rst  plot_interval.rst  plot_intervals.rst  plot_read.rst  plot_reads.rst  plot_splice_junctions.rst  plotting.rst
src/integrative_transcriptomics_viewer/: MANIFEST.in  __init__.py  annotation_matching.py  axis.py  bam_read_operations.py  bamtrack.py  bedtrack.py  cellbarcode.py  classification.py  convenience.py  convenience.pyi  export.py  genomesource.py  genomeview.py  graphtrack.py  intervaltrack.py  quickconsensus.py  settings.py  svg.py  templates.py  track.py  (+1 more)
tools/: generate_convenience_stub.py
(+4 files in other folders)
